force-app/main/default/objects/Paycode__c/Paycode__c.object-meta.xml
<CustomObject>
    <description>Paycode configuration for time entry and billing rules</description>
    <label>Paycode</label>
    <nameField>
        <label>Paycode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paycodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>