force-app/main/default/objects/Paycode__c/fields/Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Type__c</fullName>
    <description>Indicates if this is a Pay Code or Adjustment code</description>
    <label>Code Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay Code</fullName>
                <default>true</default>
                <label>Pay Code</label>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Pay Code or Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>