force-app/main/default/objects/Paycode__c/fields/Pay_Bill_Type__c.field-meta.xml
<CustomField>
    <fullName>Pay_Bill_Type__c</fullName>
    <description>Determines if this paycode is Pay Only, Bill Only, or Pay &amp; Bill</description>
    <label>Pay/Bill Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay Only</fullName>
                <description>Transactions with this paycode should NOT be invoiced but should be included in payroll export</description>
                <label>Pay Only</label>
            </value>
            <value>
                <fullName>Bill Only</fullName>
                <description>Transactions with this paycode should NOT be paid but should be included in invoice</description>
                <label>Bill Only</label>
            </value>
            <value>
                <fullName>Pay &amp; Bill</fullName>
                <default>true</default>
                <description>Should expect to both pay and bill this transaction</description>
                <label>Pay &amp; Bill</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>