force-app/main/default/objects/Paycode__c/fields/Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Type__c</fullName>
    <description>Indicates if this is Worked Time or Non Worked Time</description>
    <label>Time Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Worked Time</fullName>
                <default>true</default>
                <label>Worked Time</label>
            </value>
            <value>
                <fullName>Non Worked Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>